_sass/_layout.scss
%main-width {
    max-width: $main-width;
    padding: $spacing-unit;
    margin: 0 auto;

    @include media-query($on-palm) {
        padding-left: $spacing-unit / 2;
        padding-right: $spacing-unit / 2;
    }
}

/**
 * Site header
 */
.header-wrapper {
    width: 100%;
    background-color: $brand-color;
    background-image: -webkit-linear-gradient(left, $brand-color, lighten($brand-color, 15%));
    background-image: linear-gradient(to right , $brand-color, lighten($brand-color, 15%));
}

.site-header {
    @extend %main-width;

    // Positioning context for the mobile navigation icon
    position: relative;

    a {
        color: $header-text-color;
    }

}

.site-nav {

    .menu-icon {
        display: none;
    }

    .page-link {

        // Gaps between nav items, but not on the first one
        &:not(:first-child) {
            margin-left: 20px;
        }
    }

    @include media-query($on-palm) {
        position: absolute;
        bottom: 9px;
        right: 30px;

        background-color: $background-color;
        border: 1px solid $grey-color-light;
        border-radius: 5px;
        text-align: right;

        .menu-icon {
            display: block;
            float: right;
            width: 36px;
            height: 26px;
            line-height: 0;
            padding-top: 10px;
            text-align: center;

            > svg {
                width: 18px;
                height: 15px;

                path {
                    fill: $grey-color-dark;
                }
            }
        }

        .trigger {
            clear: both;
            display: none;
        }

        &:hover,
        &:active {

            .trigger {
                display: block;
                padding-bottom: 5px;
                position: absolute;
                top: $menu-icon-height;
                right: 0;
                background-color: $background-color;
                border-radius: 5px;
                border: 1px solid $grey-color-light;
            }

            //.menu-icon {
            //    display: none;
            //}
        }

        .page-link {
            display: block;
            padding: 10px;
            color: $text-color;
        }
    }
}

/**
 * Main content
 */

main {
    @extend %main-width;

    .post:not(:last-child) {
        border-bottom: 1px solid $grey-color-light;
        margin-bottom: $spacing-unit;
    }
}


/**
 * Site footer
 */
.site-footer {
    @extend %main-width;

    border-top: 1px solid $grey-color-light;
}

.footer-heading {
    font-size: 18px;
    margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
    list-style: none;
    margin-left: 0;
}

.footer-col-wrapper {
    font-size: 15px;
    color: $grey-color;
    margin-left: -$spacing-unit / 2;
    @extend %clearfix;
}

.footer-col {
    float: left;
    margin-bottom: $spacing-unit / 2;
    padding-left: $spacing-unit / 2;
}

.footer-col-1 {
    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
    width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
    width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
    width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
    .footer-col-1,
    .footer-col-2 {
        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
        width:         calc(50% - (#{$spacing-unit} / 2));
    }

    .footer-col-3 {
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

@include media-query($on-palm) {
    .footer-col {
        float: none;
        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
        width:         calc(100% - (#{$spacing-unit} / 2));
    }
}

/**
 * Posts
 */
.post-header {
    margin-bottom: $spacing-unit;
}

.post-title {
    font-size: 42px;
    letter-spacing: -1px;
    line-height: 1;

    @include media-query($on-laptop) {
        font-size: 36px;
    }
}

.post-meta {
    font-size: $small-font-size;
    color: $grey-color;
}

.post-content {
    margin-bottom: $spacing-unit;
    @extend %clearfix;

    h2 {
        font-size: 32px;

        @include media-query($on-laptop) {
            font-size: 28px;
        }
    }

    h3 {
        font-size: 26px;

        @include media-query($on-laptop) {
            font-size: 22px;
        }
    }

    h4 {
        font-size: 20px;

        @include media-query($on-laptop) {
            font-size: 18px;
        }
    }

    img {
        float: right;
        padding: $spacing-unit / 3;

    }

    .full-width {
        width: 100%;
        height: auto;
        float: none;
        padding-left: 0;
        padding-right: 0;
    }
}

